# Decentralized-Federated-Detection-of-Network-Anomalies-in-Mobile-Networks

./: README.md  all_hdfl_detection_metrics.csv  all_marl_traffic_metrics.csv
Code/: enhanced_marl_xgb.py  marl_xgb.py  naive_baseline.py
Datasets/: cic dataset access.md
analysis/: all_hdfl_traffic_metrics.csv  all_marl_detection_metrics.csv  logistic_regression_baseline_results.csv
results/enhanced/: README.md  enhanced_comparison.csv  enhanced_summary.json
threatmesh/: .gitignore  README.md  pyproject.toml  requirements.txt
threatmesh/examples/: sample_events.jsonl
threatmesh/tests/: test_features.py  test_mesh.py
threatmesh/threatmesh/: __init__.py  agent.py  api.py  cli.py  detector.py  features.py  mesh.py  models.py  policy.py  synthetic.py  trust.py
