[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threatmesh"
version = "0.1.0"
description = "Decentralized honeypot and anomaly intelligence mesh using local ML agents and trust-weighted peer exchange."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Simon Parris"}
]
keywords = ["cybersecurity", "honeypot", "anomaly-detection", "federated-learning", "xgboost", "marl"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Monitoring"
]
dependencies = [
  "fastapi>=0.110",
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.6",
  "scikit-learn>=1.3",
  "typer>=0.12",
  "uvicorn>=0.27",
  "xgboost>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
threatmesh = "threatmesh.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["threatmesh*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
